# math_app

./: Cargo.toml  notes.md  notes.txt  temp.rs
.github/workflows/: deploy.yml
backend/: .env  Cargo.toml
backend/.sqlx/: query-2329b4f2f35c6770a9c881817b3331979370682afb0f15a61f670973f4d4ea6a.json  query-48508e9717f9dfb14dfab99bf96237263f8705bfef8d5085ad04a9620af225c9.json  query-7b8cc7750caca364fa8156e4c2cf3ad8ecbd1320c1929b1f9225bc5a28a7e4b0.json  query-9b7ca3939f62a28775a297c05befca70c6e0ca30038f56d7d184917e57eb035b.json  query-b3c136f1bc48094458e7d4e39e924873873a7d1bdc14a58aa8ff763f4bad2d7f.json
backend/src/: main.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: api.rs  app.rs  main.rs  quiz.rs  util.rs
frontend/src/components/: analog_clock.rs  choice_button_quiz.rs  course_selector.rs  fraction_comparison_component.rs  leaderboard.rs  mod.rs  number_comparison.rs  quiz_result.rs  quiz_select.rs  quiz_session.rs  top_users.rs  two_choice_button.rs
frontend/src/quizzes/: addition_100.rs  addition_1_10.rs  area.rs  average.rs  circumference.rs  clock_reading.rs  division_1_10.rs  eight_expressions.rs  expressions.rs  first_degree_derivative.rs  first_order_equation.rs  fraction_comparizon.rs  fraction_to_degree.rs  generic_math.rs  median.rs  mod.rs  multiplication_1_10.rs  multiplication_1_20.rs  negative_values.rs  number_comparison.rs  percent_change.rs  roman_numerals.rs  rounding.rs  seven_first_order_equation.rs  seven_percent_change.rs  six_average.rs  six_fraction_to_degree.rs  six_median.rs  six_rounding.rs  subtraction_1_10.rs
frontend/src/state/: quiz.rs
