[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
web-time = "1.1.0"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = [
    "macros",
    "chrono",
    "uuid",
], optional = true }

[features]
default = []
# This feature will be enabled by the backend
backend = ["dep:sqlx"]
