[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
common = { path = "../common" }
web-sys = "0.3.77"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo = "0.11.0"
gloo-net = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9.1"
gloo-timers = "0.3.0"
web-time = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
